# Misato

./: .env.example  Cargo.toml  README.MD  Rocket.toml
crates/misato_database/: Cargo.toml
crates/misato_database/src/: api_manager.rs  database.rs  lib.rs  user_manager.rs
crates/misato_database/src/models/: apiuser_model.rs  mod.rs  user_model.rs
crates/misato_security/: Cargo.toml
crates/misato_security/src/: lib.rs  password.rs
crates/misato_utils/: Cargo.toml
crates/misato_utils/src/: lib.rs  settings.rs
crates/yui_database/: Cargo.toml
crates/yui_database/src/: database.rs
crates/yui_utils/: Cargo.toml
src/: main.rs  session.rs
src/errors/: account_errors.rs  apiaccount_errors.rs  mod.rs
src/fairings/: api_authentication.rs  authentication.rs  mod.rs
src/routes/: mod.rs
src/routes/admin/: account.rs
src/routes/api/: account.rs
src/routes/api/admin/: account.rs
src/routes/api/root/: account.rs
src/routes/root/: account.rs
src/routes/user/: account.rs
