[package]
name = "yui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*",
]

[dependencies]
rocket = "0.5.0-rc.2"

yui_database = { path = "crates/yui_database"}
yui_utils = { path = "crates/yui_utils"}

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
