[package]
name = "misato-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*",
]

[dependencies]
serde = "1.0.143"
serde_json = "1.0.83"

# misato = "0.1.0"
misato = { path = "../Rust-API/" }

misato_database = { path = "crates/misato_database"}
misato_utils = { path = "crates/misato_utils"}
misato_security = { path = "crates/misato_security"}

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
